# codex

./: README.md  base.md  pyproject.toml
docs/: mvp_macos_youtube_character_companion.md
scripts/: install_macos_companion.sh
src/youtube_buddy/: __init__.py  ai.py  app.py  audio.py  capture.py  config.py  orchestrator.py  rate_limit.py  state.py  youtube_control.py
tests/: test_rate_limit.py
